# reviews-tool

./: .flake8  .gitignore  CLAUDE.md  DEVELOPMENT_ROADMAP.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
src/reviews_tool/: __init__.py  cli.py  mcp_server.py  models.py  utils.py
src/reviews_tool/scrapers/: __init__.py  android.py  ios.py
tests/: __init__.py  test_cli.py  test_integration.py  test_mcp_server.py  test_models.py  test_scrapers_android.py  test_scrapers_ios.py
